<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">C</string>
    <string name="back">⌫</string>
    <string name="equal">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="brackets">( )</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="product">×</string>
    <string name="divide">÷</string>
    <string name="Sin">sin</string>
    <string name="Cos">cos</string>
    <string name="Tan">tan</string>
    <string name="Log">log</string>
    <string name="Power">^</string>
    <string name="show">Enter The Value</string>
    <string name="sinAngle">Sin(</string>
</resources>